crates/test-ui/ui/array_iter_correct_lifetime.stderr
error[E0502]: cannot borrow `*arr` as immutable because it is also borrowed as mutable
 --> ui/array_iter_correct_lifetime.rs
  |
  |     for _ in &mut *arr {
  |              ---------
  |              |
  |              mutable borrow occurs here
  |              mutable borrow later used here
  |         let _ = &arr[0];
  |                  ^^^ immutable borrow occurs here

error[E0502]: cannot borrow `*arr` as mutable because it is also borrowed as immutable
 --> ui/array_iter_correct_lifetime.rs
  |
  |     for s in arr.iter_retained() {
  |              -------------------
  |              |
  |              immutable borrow occurs here
  |              immutable borrow later used here
  |         arr.push(s);
  |         ^^^^^^^^^^^ mutable borrow occurs here

error[E0502]: cannot borrow `*arr` as mutable because it is also borrowed as immutable
 --> ui/array_iter_correct_lifetime.rs
  |
  |     for s in &*arr {
  |              -----
  |              |
  |              immutable borrow occurs here
  |              immutable borrow later used here
  |         arr.push(s.copy());
  |         ^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
